[gd_scene load_steps=17 format=3 uid="uid://b0clrx6pdvkxi"]

[ext_resource type="Script" path="res://scripts/mainmenu.gd" id="1_by3m3"]
[ext_resource type="Texture2D" uid="uid://d203xjmnn03io" path="res://sprites/space/space_no_stars.png" id="2_kkks3"]
[ext_resource type="Shader" path="res://scripts/scroll_shader.gdshader" id="3_fakyl"]
[ext_resource type="Texture2D" uid="uid://drqqepykcmgvj" path="res://sprites/space/space_yes_stars.png" id="4_i5uot"]
[ext_resource type="Texture2D" uid="uid://b3inl7thgnbla" path="res://ui/oneshooterslogo_tall.png" id="5_fxqxh"]
[ext_resource type="Texture2D" uid="uid://c0gwq8hmmp3wd" path="res://ui/desks/deskui.png" id="6_ysdap"]
[ext_resource type="FontFile" uid="uid://cjsn6sorvmyt6" path="res://demo/assets/fonts/8bitOperatorPlusSC-Bold.ttf" id="7_11mjm"]
[ext_resource type="Texture2D" uid="uid://do45gq4e744ua" path="res://sprites/jedpromo1.png" id="8_2v6x8"]
[ext_resource type="Texture2D" uid="uid://bvor273at4cw3" path="res://ui/oneshooterslogo.png" id="9_ks6x1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ry18s"]
shader = ExtResource("3_fakyl")
shader_parameter/speed = 0.01

[sub_resource type="Animation" id="Animation_hbwma"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mj41p"]
resource_name = "blink"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pvm5c"]
_data = {
"RESET": SubResource("Animation_hbwma"),
"blink": SubResource("Animation_mj41p")
}

[sub_resource type="Animation" id="Animation_pihev"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_whpcv"]
resource_name = "fade_out"
length = 0.3333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p3rle"]
_data = {
"RESET": SubResource("Animation_pihev"),
"fade_out": SubResource("Animation_whpcv")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_by3m3")
metadata/_edit_lock_ = true

[node name="space" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = -611.0
offset_top = -364.0
offset_right = 338.0
offset_bottom = 170.0
scale = Vector2(2.11825, 2.58)
texture = ExtResource("2_kkks3")
expand_mode = 1

[node name="stars" type="TextureRect" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_ry18s")
layout_mode = 0
offset_left = 207.0
offset_top = -329.0
offset_right = 673.0
offset_bottom = -33.0
rotation = 0.990551
scale = Vector2(2.11825, 2.58)
texture = ExtResource("4_i5uot")
expand_mode = 1
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="logo" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(177, 153)
scale = Vector2(0.214006, 0.214006)
texture = ExtResource("5_fxqxh")
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 87.0
offset_top = 228.0
offset_right = 271.0
offset_bottom = 385.0
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
clip_contents = true
layout_mode = 2

[node name="play" type="TextureButton" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_ysdap")

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/play"]
texture_filter = 1
layout_mode = 0
offset_left = 38.0
offset_right = 83.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("7_11mjm")
text = "play"

[node name="options" type="TextureButton" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("6_ysdap")

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/options"]
texture_filter = 1
layout_mode = 0
offset_left = 25.0
offset_right = 100.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("7_11mjm")
text = "options"

[node name="exit" type="TextureButton" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("6_ysdap")

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/exit"]
texture_filter = 1
layout_mode = 0
offset_left = 38.0
offset_right = 83.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("7_11mjm")
text = "exit
"

[node name="Jedpromo1" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 33.0
offset_top = 172.0
offset_right = 663.0
offset_bottom = 672.0
scale = Vector2(0.956203, 0.956203)
texture = ExtResource("8_2v6x8")

[node name="Label" type="Label" parent="."]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 12.0
offset_top = 430.0
offset_right = 215.0
offset_bottom = 497.0
theme_override_fonts/font = ExtResource("7_11mjm")
theme_override_font_sizes/font_size = 23
text = "tap anywhere
    to start"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label"]
libraries = {
"": SubResource("AnimationLibrary_pvm5c")
}

[node name="SplashTransition" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00784314, 0.0117647, 0.137255, 1)
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="SplashTransition"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -135.0
offset_right = 170.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_ks6x1")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="SplashTransition"]
libraries = {
"": SubResource("AnimationLibrary_p3rle")
}

[connection signal="button_down" from="CenterContainer/VBoxContainer/play" to="." method="_on_play_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/exit" to="." method="_on_exit_button_down"]
